--- a/css/master.css
+++ b/css/master.css
@@ -6,35 +6,45 @@
   box-sizing: border-box;
 }
 
-.body {
-  height: 100vh;
-  text-align: center;
-  background: linear-gradient(rgba(0, 0, 0, 0.40), rgba(0, 0, 0, 0.40)), url("../img/background3.jpeg") no-repeat top;
+body {
+  background: linear-gradient(rgba(0, 0, 0, 0.40), rgba(0, 0, 0, 0.40)), url("../img/background.jpg") no-repeat top;
   background-size: cover;
   background-position: center;
 }
 
-img {
-  height: 380px;
-  width: 90%;
+.container {
+  margin: 0;
+  height: 100vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+}
+
+.col-xs-12 img {
+  display: flex;
+  align-items: flex-start;
+  width: 300px;
 }
 
 h1 {
-  margin-top: 200px;
-  font-size: 100px;
   color: white;
   padding: 10px;
 }
 
 .button {
-  margin-top: 55%;
   text-align: center;
 }
 
 button {
   background: #6CB518;
-  border: 5px solid white;
+  border: 2px solid white;
   border-radius: 20px;
-  width: 70%;
-  font-size: 100px;
+  font-size: 20px;
+  width: 180px;
 }
