--- a/css/master.css
+++ b/css/master.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: linear-gradient(rgba(0, 0, 0, 0.40), rgba(0, 0, 0, 0.40)), url("../img/background.jpg") no-repeat top;
+  background: linear-gradient(rgba(0, 0, 0, 0.40), rgba(0, 0, 0, 0.40)), url("../img/background3.jpg") no-repeat top;
   background-size: cover;
   background-position: center;
 }
