--- a/css/master.css
+++ b/css/master.css
@@ -7,18 +7,18 @@
 }
 
 body {
-  background: linear-gradient(rgba(0, 0, 0, 0.40), rgba(0, 0, 0, 0.40)), url("../img/background3.jpg") no-repeat top;
+  background: linear-gradient(rgba(0, 0, 0, 0.30), rgba(0, 0, 0, 0.30)), url("../img/background3.jpg") no-repeat top;
   background-size: cover;
   background-position: center;
 }
 
 .container {
-  margin: 0;
   height: 100vh;
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding-bottom: 300px;
 }
 
 .row {
@@ -26,15 +26,15 @@ body {
   justify-content: space-between;
 }
 
-.col-xs-12 img {
-  display: flex;
-  align-items: flex-start;
-  width: 300px;
+.logo img {
+  padding-top: 100px;
+  height: 350px;
 }
 
 h1 {
   color: white;
   padding: 10px;
+  font-size: 80px;
 }
 
 .button {
@@ -45,14 +45,14 @@ button {
   background: #6CB518;
   border: 2px solid white;
   border-radius: 20px;
-  font-size: 20px;
-  width: 180px;
+  font-size: 70px;
+  width: 480px;
 }
 
 .savings {
   width: 100%;
   display: block;
-  font-size: 20px;
+  font-size: 60px;
   background-color: transparent;
   color: #6CB518;
   border: none;
